--- a/app/views/main/select.html.erb
+++ b/app/views/main/select.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: "/main/test", method: :post, data: {turbo: false} do |f| %>
-  <%= f.hidden_field :root, value: true %>
+  <%= f.hidden_field :select, value: true %>
   <%= f.collection_select :num, @amount, :to_s, :to_s, prompt: true %>
-  <%= f.submit %>
+  <%= f.submit "Submit"%>
 <% end %>
