--- a/app/views/main/test.html.erb
+++ b/app/views/main/test.html.erb
@@ -1,15 +1,16 @@
 <%= form_with url: "/main/test", method: :post, data: {turbo: false} do |f| %>
   <%= for i in 1..@num do %>
       <div class="field" id="type#{i}">
-	    <%= f.hidden_field :root, value: false %>
+	    <%= f.hidden_field :select, value: false %>
 	    <%= f.hidden_field :num, value: @num %>
+	    
 	    <%= f.label "subject#{i}", "subject#{i}" %>
-	    <%= f.text_field "subject#{i}", :value => params["subject#{i}"] %>
+	    <%= f.text_field "subject#{i}", value: params["subject#{i}"] %>
 	    
 	    <%= f.label "score#{i}", "score#{i}" %>
-	    <%= f.number_field :"score#{i}", in: 0..100, step: 1, :value => params["score#{i}"] %>
+	    <%= f.number_field :"score#{i}", in: 0..100, step: 1, value: params["score#{i}"] %>
 	    
-	    <% if params[:root]=="false" %>
+	    <% if params[:select]=="false" %>
 	      <% if params["subject#{i}"].blank? and %>
 		<%= f.label "subject#{i}", "subject cant be empty" %>
 	      <% end %>
@@ -20,5 +21,5 @@
       <br>
       </div>
   <% end %>
-  <%= f.submit %>
+  <%= f.submit "Submit"%>
 <% end %>
